Fixing form on mobile

--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -287,3 +287,9 @@ input:focus, textarea:focus {
     height: 100%;
   }
 }
+
+@media (max-width: 768px) {
+  .form-div.active {
+    width: 97.5%;
+  }
+}
